--- a/assets/style.css
+++ b/assets/style.css
@@ -20,6 +20,6 @@ td {
 }
 
 #season_overview_table {
-  max-height: 500px;
+  max-height: calc(100vh - 98.398px - 34.193px - 54px - 15px - 94px - 15px);
   overflow: auto;
 }
