--- a/assets/style.css
+++ b/assets/style.css
@@ -11,12 +11,12 @@ td {
 }
 
 .selector_label {
-  margin-right: 5px;
+  margin-right: 10px;
   width: 70.761px; /* minimal width which 'Event day' label requires  */
 }
 
 .selector {
-  width: 100px; /* minimal width which 'Event day' selector requires */
+  width: 110px;
 }
 
 #season_overview_table {
